# esm3-modal-server

./: README.md  pyproject.toml  requirements.txt
notebooks/: model_evolution.ipynb  model_sequence.ipynb
src/esm3_hacking/: endpoint.py
src/esm3_hacking/lib/: deserializer.py
